k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexusplay-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /user/(.*)
            backend:
              service:
                name: user-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /game/(.*)
            backend:
              service:
                name: game-service
                port:
                  number: 3000
